--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -8,7 +8,7 @@ server {
 
      location / {
         root /var/www/base/tos-web/dist;
-        try_files $uri @fallback;
+        try_files $uri $url/index.html @fallback;
     }
 
     location @fallback {
