--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -8,13 +8,10 @@ server {
 
      location / {
         root /var/www/base/tos-web/dist;
-        try_files $uri $uri/index.html @fallback;
+        index index.html;
     }
 
-    location @fallback {
-        root /var/www/base/tos-build/dist;
-        try_files $uri /index.html;
-    }
+    
 }
 
 
