--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -6,10 +6,9 @@ map $http_upgrade $connection_upgrade {
 server {
     listen 8000 default;
 
-     location / {
+    location / {
         root /var/www/base/tos-web/dist/;
-        index index.html;
+        try_files $uri index.html;
     }
 
-    
 }
