--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -5,10 +5,11 @@ map $http_upgrade $connection_upgrade {
 
 server {
     listen 8000 default;
-
+    resolver 8.8.8.8;
+    root /var/www/base/tos-web/dist/;
     location / {
-        root /var/www/base/tos-web/dist/;
-        try_files $uri index.html;
+       
+        try_files $uri /index.html;
     }
 
 }
