--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -6,5 +6,6 @@ services:
             - "8200:8000"
         volumes:
             - ./input:/var/www/base/tos-parser/input/
-         
+            - ./distweb:/var/www/base/tos-web/dist/
+            - ./distbuild/var/www/base/tos-build/dist/
             
