--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,5 @@ services:
             - "8000:8000"
         volumes:
             - ./input:/var/www/base/tos-parser/input/
-           
-            
+            - ./distweb:/var/www/base/tos-web/dist/
+            - ./distbuild:/var/www/base/tos-build/dist/
