--- a/tos-search/package.json
+++ b/tos-search/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "console-stamp": "^0.2.7",
     "lunr": "^2.3.9",
+    "lunr-language-jp": "^1.0.1",
     "lunr-languages": "^1.4.0",
-    "lunr-language-jp":"^1.0.1",
     "nodejieba": "^2.5.2",
-    "papaparse": "^5.3.1"
-    
+    "papaparse": "^5.3.1",
+    "tiny-segmenter": "^0.2.0"
   }
 }
