--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -4,9 +4,10 @@ services:
         container_name: tosdev
         build: 
             context: .
-            dockerfile: dockerfile-dev
+            dockerfile: dockerfile
         ports:
             - "8200:8000"
+            - "3999:3939"
         volumes:
             - ./input:/var/www/base/tos-parser/input/
             - ./distbuild:/var/www/base/tos-build/dist/
