--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -7,6 +7,9 @@ server {
     listen 8000 default;
     resolver 8.8.8.8;
     root /var/www/base/tos-web/dist/;
+    location /api {
+        proxy_pass http://localhost:3939;
+    }
     location / {
        
         try_files $uri /index.html;
