--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -4,7 +4,7 @@ services:
         container_name: tosdev
         build: 
             context: .
-            dockerfile: dockerfile
+            dockerfile: dockerfile-dev
         ports:
             - "8200:8000"
         volumes:
