--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3'
 services: 
     tos:
         container_name: tos
-        build: .
+        build: 
+            context: .
+            dockerfile: dockerfile
         ports:
             - "8000:8000"
         volumes:
