--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -7,22 +7,19 @@ server {
     listen 8000 default;
     resolver 8.8.8.8;
 
-    location /api {
-        proxy_pass http://localhost:3939;
-    }
+    index index.html;
+    
     location / {
-       
+        location /api {
+            proxy_pass http://localhost:3939;
+        }
         root /var/www/base/tos-web/dist;
         try_files $uri @fallback1;
     }
     location @fallback1 {
        
         root /var/www/base/tos-build/dist;
-        try_files $uri @fallback2;
+  
     }
-    location @fallback2 {
-       
-        root /var/www/base/tos-web/dist;
-        try_files $uri index.htm index.html;
-    }
+    
 }
