--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -1,11 +1,9 @@
 
-
 server {
     listen 8000 default;
     resolver 8.8.8.8;
 
-    index index.html;
-    
+    expires -1;
     location / {
         location /api {
             proxy_pass http://localhost:3939;
@@ -14,9 +12,25 @@ server {
         try_files $uri @fallback1;
     }
     location @fallback1 {
-       
-        root /var/www/base/tos-build/dist;
-  
-    }
     
+        root /var/www/base/tos-build/dist;
+        try_files $uri @fallback2;
+    }
+    location @fallback2 {
+    
+        root /var/www/base/skeleton_distweb;
+        try_files $uri @fallback3;
+    }
+    location @fallback3 {
+    
+        root /var/www/base/skeleton_distbuild;
+        try_files $uri @fallback4;
+    }
+     location @fallback4 {
+    
+        root /var/www/base/tos-web/dist;
+        try_files $uri index.html;
+    }
 }
+
+
