--- a/tos-search/package.json
+++ b/tos-search/package.json
@@ -16,6 +16,7 @@
     "lunr-languages": "^1.4.0",
     "nodejieba": "^2.5.2",
     "papaparse": "^5.3.1",
-    "tiny-segmenter": "^0.2.0"
+    "tiny-segmenter": "^0.2.0",
+    "kuromoji":"^0.1.2"
   }
 }
