--- a/tos-search/package.json
+++ b/tos-search/package.json
@@ -11,12 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "console-stamp": "^0.2.7",
+    "kuromoji": "^0.1.2",
     "lunr": "^2.3.6",
     "lunr-language-jp": "^1.0.1",
     "lunr-languages": "^1.4.0",
     "nodejieba": "^2.5.2",
     "papaparse": "^5.3.1",
-    "tiny-segmenter": "^0.2.0",
-    "kuromoji":"^0.1.2"
+    "tiny-segmenter": "^0.2.0"
   }
 }
