--- a/tos-search/package.json
+++ b/tos-search/package.json
@@ -11,8 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "console-stamp": "^0.2.7",
+    "graceful-fs": "^4.2.6",
     "kuromoji": "^0.1.2",
-    "lunr": "^2.3.6",
+    "lunr": "2.3.6",
     "lunr-language-jp": "^1.0.1",
     "lunr-languages": "^1.4.0",
     "nodejieba": "^2.5.2",
