--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -2,15 +2,14 @@
 server {
     listen 80 default;
     resolver 8.8.8.8;
-    index index.html;
-
+    
     expires -1;
     location / {
         location /api {
             proxy_pass http://localhost:3939;
         }
         root /var/www/base/tos-web/dist;
-
+        try_files $uri index.html;
     }
 }
 
