--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -9,7 +9,7 @@ server {
             proxy_pass http://localhost:3939;
         }
         root /var/www/base/tos-web/dist;
-        try_files $uri index.html;
+        try_files $uri $uri/index.html $uri/index.htm;
     }
 }
 
