--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -8,9 +8,10 @@ server {
         location /api {
             proxy_pass http://localhost:3939;
         }
-        root /var/www/base/tos-web/dist;
-        try_files $uri $uri/index.html $uri/index.htm;
+        root /var/www/base/;
+        try_files  tos-web/dist/$uri tos-build/dist/$uri tos-web/dist/$uri/index.html tos-web/dist/$uri/index.htm;
     }
+    
 }
 
 
