--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -9,7 +9,7 @@ server {
             proxy_pass http://localhost:3939;
         }
         root /var/www/base/;
-        try_files  tos-web/dist/$uri tos-build/dist/$uri tos-web/dist/$uri/index.html tos-web/dist/$uri/index.htm;
+        try_files  /tos-web/dist/$uri /tos-build/dist/$uri /tos-web/dist/$uri/index.html /tos-web/dist/$uri/index.htm;
     }
     
 }
