--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -13,11 +13,11 @@ server {
         /tos-build/dist/$uri 
         /tos-web/dist/$uri
         /tos-web/dist/$uri/index.html 
-        /tos-build/dist/$uri/index.html
+        #/tos-build/dist/$uri/index.html
         /skeleton_distweb/$uri
         /skeleton_distbuild/$uri
         /skeleton_distweb/$uri/index.html
-        /skeleton_distbuild/$uri/index.html 
+        #/skeleton_distbuild/$uri/index.html 
         /tos-web/dist/$uri/index.htm =404;
     }
     
