--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -11,14 +11,14 @@ server {
         root /var/www/base/;
         try_files  
         /tos-build/dist/$uri 
-        /tos-web/dist/$uri
-        /tos-web/dist/$uri/index.html 
-        #/tos-build/dist/$uri/index.html
-        /skeleton_distweb/$uri
         /skeleton_distbuild/$uri
+        /tos-web/dist/$uri
+        /skeleton_distweb/$uri
+        /tos-build/dist/$uri/index.html
+        /skeleton_distbuild/$uri/index.html 
+        /tos-web/dist/$uri/index.html 
         /skeleton_distweb/$uri/index.html
-        #/skeleton_distbuild/$uri/index.html 
-        /tos-web/dist/$uri/index.htm =404;
+        =404;
     }
     
 }
