--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -10,14 +10,9 @@ server {
         }
         root /var/www/base/;
         try_files  
-        #/tos-build/dist/$uri 
-        #/skeleton_distbuild/$uri
         /tos-web/dist/$uri
-        #/skeleton_distweb/$uri
-        #/tos-build/dist/$uri/index.html
-        #/skeleton_distbuild/$uri/index.html 
         /tos-web/dist/$uri/index.html 
-        #/skeleton_distweb/$uri/index.html
+        /tos-build/dist/$uri 
         =404;
     }
     
