--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -12,7 +12,8 @@ server {
         try_files  
         /tos-web/dist/$uri
         /tos-web/dist/$uri/index.html 
-        /tos-build/dist/$uri 
+        #/tos-build/dist/$uri
+        #/tos-build/dist/$uri/index.html 
         =404;
     }
     
