--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -11,7 +11,7 @@ server {
         root /var/www/base/;
         try_files  
         /tos-web/dist/$uri
-        /tos-web/dist/$uri/index.html 
+        /tos-web/dist/index.html 
         #/tos-build/dist/$uri
         #/tos-build/dist/$uri/index.html 
         =404;
