--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -11,8 +11,9 @@ server {
         root /var/www/base/;
         try_files  
         /tos-web/dist/$uri
+        /tos-build/dist/$uri
         /tos-web/dist/index.html 
-        #/tos-build/dist/$uri
+        
         #/tos-build/dist/$uri/index.html 
         =404;
     }
