--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,7 @@ fabric.properties
 # Editor-based Rest Client
 .idea/httpRequests
 
-#ebi
+# ebi
 **/__pycache__
 **/.DS_Store
 tos-parser/src/venv
@@ -84,5 +84,6 @@ ipf_unpacker/extract/*
 .gitignore
 tos-build/dist/assets/data/*
 .gitignore
+.pyc
 tos-reaction/.idea/*
 tos-reaction/venv/*
