--- a/httpserver/http.conf
+++ b/httpserver/http.conf
@@ -7,7 +7,9 @@ server {
     location /api {
         proxy_pass http://localhost:3939;
     }
-
+    location /reaction {
+        proxy_pass http://localhost:5000;
+    }
     location ~ ^/assets/(?<inter>.*)$ {
        
         try_files  
