--- a/tos-reaction/requirements.txt
+++ b/tos-reaction/requirements.txt
@@ -1,4 +1,9 @@
+click==8.0.1
 Cython==0.29.23
+Flask==2.0.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
 numpy==1.20.2
 pandas==1.2.4
 Pillow==8.2.0
@@ -7,3 +12,4 @@ python-dateutil==2.8.1
 pytz==2021.1
 six==1.15.0
 unicodecsv==0.14.1
+Werkzeug==2.0.1
