apply restart always

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -5,6 +5,7 @@ services:
         build: 
             context: .
             dockerfile: dockerfile
+        restart: always
         ports:
             - "8200:80"
         volumes:
