--- a/.dockerignore
+++ b/.dockerignore
@@ -1,19 +1,19 @@
-tos-parser/input
-**/venv
 input/*
-input
-input/**/*
-
 distbuild/*
 distweb/*
 **/.git/*
 .idea
 .git/*
 **/node-modules/*
+ipf_unpacker/jTOS/*
+ipf_unpacker/iTOS/*
+ipf_unpacker/kTOS/*
+ipf_unpacker/twTOS/*
+ipf_unpacker/kTEST/*
 tos-html/package-lock.json
 tos-search/node-modules/*
 tos-search/package-lock.json
 tos-parser/input/*
 tos-web/input/*
 tos-build/input/*
-**/venv
+**/venv/*
