--- a/.dockerignore
+++ b/.dockerignore
@@ -10,10 +10,12 @@ ipf_unpacker/iTOS/*
 ipf_unpacker/kTOS/*
 ipf_unpacker/twTOS/*
 ipf_unpacker/kTEST/*
+ipf-build/dist/assets/icons/*
 tos-html/package-lock.json
 tos-search/node-modules/*
 tos-search/package-lock.json
 tos-parser/input/*
 tos-web/input/*
+tos-web/node_modules/*
 tos-build/input/*
 **/venv/*
