--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -5,6 +5,8 @@ services:
         build: 
             context: .
             dockerfile: dockerfile
+        args:
+            - SERVICE_NAME=$SERVICE_NAME
         restart: always
         ports:
             - "8200:80"
