--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "git.ignoreLimitWarning": true,
-    "editor.detectIndentation": false
+    "editor.detectIndentation": false,
+    "angular.enable-strict-mode-prompt": false
 }
