--- a/tos-web/package.json
+++ b/tos-web/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.2",
+    "@soundng/rx-subscribe": "^2.0.0",
     "@types/lunr": "^2.3.3",
     "bootstrap": "^5.0.1",
     "clean-css": "^5.1.2",
