fix insufficient args

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
             dockerfile: dockerfile
             args:
                 - SERVICE_NAME=$SERVICE_NAME
+                - LOCAL_GID=$LOCAL_GID
+                - LOCAL_UID=$LOCAL_UID
         restart: always
        
         ports:
